--- a/main.yaml
+++ b/main.yaml
@@ -3,10 +3,10 @@
   gather_facts: no
   become: yes 
   tasks:
-  - name: Copy flask app file to vagrant server
-    copy: 
-      src: /$PWD/test.py
-      dest: /home/vagrant/test.py
+  # - name: Copy flask app file to vagrant server
+  #   copy: 
+  #     src: /$PWD/test.py
+  #     dest: /home/vagrant/test.py
   - name: install pip3
     apt:
       name: python3-pip
